# node2vec

./: .gitignore  pyproject.toml  requirements.txt
node2vec/: __init__.py  main.py  node2vec.py
notebooks/: train_node2vec.ipynb
