[tool.poetry]
name = "node2vec"
version = "0.1.0"
description = "Node2Vec adaptation to Python 3"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
networkx = "1.11"
numpy = "1.19.0"
gensim = "0.13.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
